fix for taquito subscribe tapout error when more than one contract subscribe

--- a/_dev.env
+++ b/_dev.env
@@ -17,20 +17,20 @@ DB_PATH="./db/indexer.db"
 # https://github.com/ecadlabs/taquito/blob/master/docs/rpc_nodes.md
 # https://tezostaquito.io/docs/rpc_nodes
 # Delphinet: https://rpctest.tzbeta.net | Edonet: https://edonet.smartpy.io | Mainnet: https://rpc.tzbeta.net:443
-RPC_ENDPOINT="https://delphinet.smartpy.io"
+RPC_ENDPOINT="https://edonet.smartpy.io"
 
 # Delphinet: NetXm8tYqnMWky1 | Edonet: NetXSgo1ZT2DRUG | Mainnet: NetXdQprcVkpaWU
-CHAIN_ID="NetXm8tYqnMWky1"
+CHAIN_ID="NetXSgo1ZT2DRUG"
 
 # AUCTION_CONTRACT=""
-AUCTION_CONTRACT="KT1ExCAaYfdoiY1S5AJ2Y8Y2PBv8KFTM53yr"
-# AUCTION_CONTRACT="KT1WkhPFfhydqqPXWrYFkN9gfpgus1XXCeHy"
+# AUCTION_CONTRACT="KT1ExCAaYfdoiY1S5AJ2Y8Y2PBv8KFTM53yr"
+AUCTION_CONTRACT="KT1WkhPFfhydqqPXWrYFkN9gfpgus1XXCeHy"
 # AUCTION_CONTRACT="KT1HvpCCHvC9c4iNzAa6rx4MqNsmPRJf6CEw"
 
 # Every 20 seconds
 POLLING_FREQUENCY=20000
 POLLING_BROADCAST=2000
-BLOCK_START=500104
+BLOCK_START=96000
 # BLOCK_START=509709
 
 # continue indefinitely
@@ -50,7 +50,3 @@ TAQUITO_TIMEOUT=3600
 # https://api.slack.com/apps/<app_id>/incoming-webhooks
 # To receive notifications on Slack
 SLACK_WEBHOOK=""
-
-FA2_GAS_LIMIT=40000
-FA2_STORAGE_LIMIT=250
-FA2_FEE=4080
