--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "blakejs": "^1.1.0",
     "bs58check": "^2.1.2",
     "bson": "^4.2.2",
+    "copy-anything": "^2.0.3",
     "cors": "^2.8.5",
     "deasync": "^0.1.21",
     "dotenv": "^8.2.0",
