--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@taquito/local-forging": "^8.0.6-beta.0",
+    "@taquito/michelson-encoder": "^8.0.6-beta.0",
     "@taquito/rpc": "^8.0.6-beta.0",
     "@taquito/signer": "^8.0.6-beta.0",
     "@taquito/taquito": "^8.0.6-beta.0",
