change quest_id to reward_hash_id

--- a/_dev.env
+++ b/_dev.env
@@ -30,7 +30,8 @@ AUCTION_CONTRACT="KT1WkhPFfhydqqPXWrYFkN9gfpgus1XXCeHy"
 # Every 20 seconds
 POLLING_FREQUENCY=20000
 POLLING_BROADCAST=2000
-BLOCK_START=117213
+# BLOCK_START=117213
+BLOCK_START=124925
 # BLOCK_START=509709
 
 # continue indefinitely
@@ -41,9 +42,8 @@ DETECT_ORPHAN_BLOCKS=20
 
 # how many block confirmation are needed before a block is considered safe
 FITNESS_LEVEL=3
-# 10 min
-TAQUITO_TIMEOUT=1
-# TAQUITO_TIMEOUT=600
+# timeout is in seconds; reconmended to use a number at least (FITNESS_LEVEL + 2) * 60
+TAQUITO_TIMEOUT=600
 
 # https://api.slack.com/apps
 # https://api.slack.com/apps/<app_id>/incoming-webhooks
