change operation_filter to quest

--- a/_dev.env
+++ b/_dev.env
@@ -49,3 +49,6 @@ TAQUITO_TIMEOUT=600
 # https://api.slack.com/apps/<app_id>/incoming-webhooks
 # To receive notifications on Slack
 SLACK_WEBHOOK=""
+
+# Special endpoints
+WHITELIST_IP='["127.0.0.1"]'
